--- a/Sporadic Server/main.tex
+++ b/Sporadic Server/main.tex
@@ -36,7 +36,7 @@ vytaras.juraska@stud.hshl.de}
 \maketitle
 
 \begin{abstract}
-an explanation and a deep dive on the working concept, the history of development and the usage of a very specific solution to aperiodic and unpredictable task scheduling - Sporadic Server. Understanding and analyzing the relevancy and connection when applying specified scheduling server to the current time and age technology standards.
+an explanation and a deep dive on the working concept and the mathematical definition of an aperiodic task scheduling approach - called Sporadic Server. 
 \end{abstract}
     
 
