--- a/Sporadic Server/main.tex
+++ b/Sporadic Server/main.tex
@@ -209,4 +209,7 @@ Nevertheless, considering which scheduling approach has the best performance - r
 
 \bibliography{references}
 
+\section{Affidavit}
+I, Vytaras Juraska, herewith declare that I have composed the present paper and work by our self and without use of any other than the cited sources and aids. Sentences or parts of sentences quoted literally are marked as such; other references with regard to the statement and scope are indicated by full details of the publications concerned. The paper and work in the same or similar form has not been submitted to any examination body and has not been published. This paper was not yet, even in part, used in another examination or as a course performance.
+
 \end{document}
