Fixed Tau not compiled correctly

--- a/Sporadic Server/main.tex
+++ b/Sporadic Server/main.tex
@@ -150,7 +150,7 @@ Summing up the example of high-priority SS scheduling, we can see, that once the
 
 \section{Reinterpretation}
 
-There is a unique way to define the concept of SS, differently from previous definitions. From a scheduling point of view, we can treat SS as a periodic task with a period $T_s$ and execution time $C_s$. The theory is as follows: "A periodic task set that is schedulable with a task $τ_i$ is also schedulable if $τ_i$ is replaced by a Sporadic Server with the same period and execution time." \cite{b1}
+There is a unique way to define the concept of SS, differently from previous definitions. From a scheduling point of view, we can treat SS as a periodic task with a period $T_s$ and execution time $C_s$. The theory is as follows: "A periodic task set that is schedulable with a task $\tau_i$ is also schedulable if $\tau_i$ is replaced by a Sporadic Server with the same period and execution time." \cite{b1}
 
 This is easily proved by showing, that for any type of service - SS execution can be represented by one or more periodic tasks. Let's define $t_A$ as a time at which the previously defined server capacity $C_s$ is filled and SS turns to an active state, and on the contrary, let's say that $t_I$ is the time, when SS is idle, hence the period, of when SS is active is represented by $[t_A,t_I ]$.  Using the method of delaying a periodic task, this characteristic can be simply defined in three unique cases.
 
